# sakn

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
src/backend/: Dockerfile  pyproject.toml  startup.sh
src/backend/alembic/: env.py
src/backend/alembic/versions/: 4cf8dd599766_initial_all_models.py  55cf8e97f4da_set_null_on_preferences_session_fk.py  5a1b2c3d4e56_add_unique_role_tool_permission.py  8a2a49d76d6a_hash_cleartext_emails_in_seclog.py  d7091a29b949_add_unique_role_tool_permission.py  f1a2b3c4d5e6_hash_cleartext_emails_in_seclog.py
src/backend/app/: config.py  database.py  main.py
src/backend/app/api/: errors.py
src/backend/app/cli/: create_admin.py  main.py
src/backend/app/constants/: roles.py
src/backend/app/logs/: logger.py
src/backend/app/middleware/: admin.py  proxy_trust.py  rate_limit.py  request_id.py  security_headers.py  session.py
src/backend/app/models/: __init__.py  base.py  log.py  preferences.py  session.py  tool_module.py  user.py
src/backend/app/redis/: connection.py  rate_limit_store.py  session_store.py
src/backend/app/security/: address_filter.py  cookies.py  csrf.py  password.py  tokens.py
src/backend/app/services/: account_cleanup_service.py  admin_service.py  auth_service.py  email_service.py  log_service.py  preference_cleanup_service.py  preference_service.py  rate_limit_service.py  session_cleanup_service.py  session_service.py
src/backend/app/tools/: base.py  dns_lookup.py  ping.py  registry.py  ssl_viewer.py  traceroute.py
src/backend/app/websocket/: manager.py
src/backend/tests/: conftest.py  factories.py
src/backend/tests/integration/: test_admin_api.py  (+6 more)
(+232 files in other folders)
