[project]
name = "sakn"
version = "0.0.2"
description = "Swiss Army Knife for Network Engineers — MVP"

requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "SAKN Team" }
]
keywords = ["network", "diagnostics", "ping", "traceroute", "dns", "ssl"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "argon2-cffi>=23.1.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
    "dnspython>=2.7.0",
    "cryptography>=44.0.0",
    "uuid7>=0.1.0",
    "click>=8.1.0",
    "apscheduler>=3.10.0",
    "zxcvbn>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "bandit>=1.8.0",
]

[project.scripts]
sakn-cli = "app.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "tests"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/**/*.py" = ["E712", "N802", "N806", "B017"]
"app/tools/ssl_viewer.py" = ["E402"]
"app/api/v1/endpoints/auth.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: tests requiring network access",
    "slow: slow running tests",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
